HelloUltraviolet/Fixtures/RejectedSource/Parallelism/GpuCaptureShared/Expected.uv
//! Expected diagnostic metadata for the GpuCaptureShared rejected-source specimen.

expectedDiagnostic("E-CON-0151", "rule.20.GpuCapture-Shared-Err")
